GROOVY-7971, GROOVY-8337, GROOVY-8965: logical-or `instanceof` guards