@@ -266,6 +266,7 @@ import static org.codehaus.groovy.syntax.Types.INTDIV;
 import static org.codehaus.groovy.syntax.Types.INTDIV_EQUAL;
 import static org.codehaus.groovy.syntax.Types.KEYWORD_IN;
 import static org.codehaus.groovy.syntax.Types.KEYWORD_INSTANCEOF;
+import static org.codehaus.groovy.syntax.Types.LOGICAL_OR;
 import static org.codehaus.groovy.syntax.Types.MINUS_MINUS;
 import static org.codehaus.groovy.syntax.Types.MOD;
 import static org.codehaus.groovy.syntax.Types.MOD_EQUAL;
@@ -848,10 +849,13 @@ public class StaticTypeCheckingVisitor extends ClassCodeVisitorSupport {
                 return;
             }
 
+            // GROOVY-7971, GROOVY-8965, GROOVY-10096, GROOVY-10702, et al.
+            if (op == LOGICAL_OR) typeCheckingContext.pushTemporaryTypeInfo();
+
             leftExpression.visit(this);
             ClassNode lType = getType(leftExpression);
             var setterInfo  = removeSetterInfo(leftExpression);
-            if (setterInfo != null) {
+            if (setterInfo != null) { assert op != LOGICAL_OR ;
                 if (ensureValidSetter(expression, leftExpression, rightExpression, setterInfo)) {
                     return;
                 }
@@ -860,7 +864,16 @@ public class StaticTypeCheckingVisitor extends ClassCodeVisitorSupport {
                     lType = getOriginalDeclarationType(leftExpression);
                     applyTargetType(lType, rightExpression);
                 }
-                rightExpression.visit(this);
+                if (op != LOGICAL_OR) {
+                    rightExpression.visit(this);
+                } else {
+                    var lhs = typeCheckingContext.temporaryIfBranchTypeInformation.pop();
+                    typeCheckingContext.pushTemporaryTypeInfo();
+                    rightExpression.visit(this);
+
+                    var rhs = typeCheckingContext.temporaryIfBranchTypeInformation.pop();
+                    propagateTemporaryTypeInfo(lhs, rhs); // `instanceof` on either side?
+                }
             }
 
             ClassNode rType = isNullConstant(rightExpression)
@@ -973,7 +986,7 @@ public class StaticTypeCheckingVisitor extends ClassCodeVisitorSupport {
             } else if (op == KEYWORD_INSTANCEOF) {
                 pushInstanceOfTypeInfo(leftExpression, rightExpression);
             } else if (op == COMPARE_NOT_INSTANCEOF) { // GROOVY-6429, GROOVY-8321, GROOVY-8412, GROOVY-8523, GROOVY-9931
-                putNotInstanceOfTypeInfo(extractTemporaryTypeInfoKey(leftExpression), Collections.singleton(rightExpression.getType()));
+                putNotInstanceOfTypeInfo(extractTemporaryTypeInfoKey(leftExpression), Set.of(rightExpression.getType()));
             }
             if (!isEmptyDeclaration) {
                 storeType(expression, resultType);
@@ -986,6 +999,36 @@ public class StaticTypeCheckingVisitor extends ClassCodeVisitorSupport {
             }
         } finally {
             typeCheckingContext.popEnclosingBinaryExpression();
+        }
+    }
+
+    private void propagateTemporaryTypeInfo(final Map<Object, List<ClassNode>> lhs,
+                                            final Map<Object, List<ClassNode>> rhs) {
+        // TODO: deal with (x !instanceof T)
+        lhs.keySet().removeIf(k -> k instanceof Object[]);
+        rhs.keySet().removeIf(k -> k instanceof Object[]);
+
+        for (var entry : lhs.entrySet()) {
+            if (rhs.containsKey(entry.getKey())) {
+                // main case: (x instanceof A || x instanceof B) produces A|B type
+                ClassNode t = newUnionTypeClassNode(DefaultGroovyMethods.plus(entry.getValue(), rhs.get(entry.getKey())));
+                typeCheckingContext.peekTemporaryTypeInfo(entry.getKey()).add(t);
+            } else if (entry.getKey() instanceof Variable v) {
+                // edge case: (x instanceof A || ...) produces A|typeof(x) type
+                ClassNode t = newUnionTypeClassNode(DefaultGroovyMethods.plus(entry.getValue(), v instanceof ASTNode n ? getType(n) : v.getType()));
+                typeCheckingContext.peekTemporaryTypeInfo(v).add(t);
+            }
+        }
+
+        rhs.keySet().removeAll(lhs.keySet());
+
+        for (var entry : rhs.entrySet()) {
+            if (entry.getKey() instanceof Variable v) {
+                // edge case: (... || x instanceof B) produces typeof(x)|B type
+                var types = new LinkedList<>(entry.getValue());
+                types.addFirst(v instanceof ASTNode n ? getType(n) : v.getType());
+                typeCheckingContext.peekTemporaryTypeInfo(v).add(newUnionTypeClassNode(types));
+            }
         }
     }
 
@@ -1170,8 +1213,8 @@ out:    if ((samParameterTypes.length == 1 && isOrImplements(samParameterTypes[0
                 }
                 addStaticTypeError(message, leftExpression);
             } else {
-                ClassNode[] tergetTypes = visibleSetters.stream().map(setterType).toArray(ClassNode[]::new);
-                addAssignmentError(tergetTypes.length == 1 ? tergetTypes[0] : new UnionTypeClassNode(tergetTypes), getType(valueExpression), expression);
+                List<ClassNode> targetTypes = visibleSetters.stream().map(setterType).toList();
+                addAssignmentError(newUnionTypeClassNode(targetTypes), getType(valueExpression), expression);
             }
             return true;
         }
@@ -1492,9 +1535,8 @@ out:    if ((samParameterTypes.length == 1 && isOrImplements(samParameterTypes[0
                     ClassNode valueType = getType(valueExpression);
                     BinaryExpression kv = typeCheckingContext.popEnclosingBinaryExpression();
                     if (propertyTypes.stream().noneMatch(targetType -> checkCompatibleAssignmentTypes(targetType, getResultType(targetType, ASSIGN, valueType, kv), valueExpression))) {
-                        ClassNode targetType = propertyTypes.size() == 1 ? propertyTypes.iterator().next() : new UnionTypeClassNode(propertyTypes.toArray(ClassNode.EMPTY_ARRAY));
-                        if (!extension.handleIncompatibleAssignment(targetType, valueType, entryExpression)) {
-                            addAssignmentError(targetType, valueType, entryExpression);
+                        if (!extension.handleIncompatibleAssignment(newUnionTypeClassNode(propertyTypes), valueType, entryExpression)) {
+                            addAssignmentError(newUnionTypeClassNode(propertyTypes), valueType, entryExpression);
                         }
                     }
                 }
@@ -2381,10 +2423,9 @@ out:    if ((samParameterTypes.length == 1 && isOrImplements(samParameterTypes[0
         super.visitExpressionStatement(statement);
         Map<?,List<ClassNode>> tti = typeCheckingContext.temporaryIfBranchTypeInformation.pop();
         if (!tti.isEmpty() && !typeCheckingContext.temporaryIfBranchTypeInformation.isEmpty()) {
-            tti.forEach((k, tempTypes) -> {
+            tti.forEach((key, tempTypes) -> {
                 if (tempTypes.contains(VOID_TYPE))
-                    typeCheckingContext.temporaryIfBranchTypeInformation.peek()
-                        .computeIfAbsent(k, x -> new LinkedList<>()).add(VOID_TYPE);
+                    typeCheckingContext.peekTemporaryTypeInfo(key).add(VOID_TYPE);
             });
         }
     }
@@ -2969,7 +3010,7 @@ out:    if ((samParameterTypes.length == 1 && isOrImplements(samParameterTypes[0
             return;
         }
         ClassNode type = call.getOwnerType();
-        if (type.isEnum() && "$INIT".equals(name)) { // GROOVY-10845: $INIT(Object[]) delegates to constructor
+        if (type.isEnum() && name.equals("$INIT")) { // GROOVY-10845: $INIT(Object[]) delegates to constructor
             Expression target = typeCheckingContext.getEnclosingBinaryExpression().getLeftExpression();
             ConstructorCallExpression cce = new ConstructorCallExpression(type, call.getArguments());
             cce.setSourcePosition(((FieldExpression) target).getField());
@@ -3700,7 +3741,7 @@ out:    if ((samParameterTypes.length == 1 && isOrImplements(samParameterTypes[0
             ClassNode[] args = getArgumentTypes(argumentList);
             boolean functorsVisited = false;
             if (!isThisObjectExpression && receiver.equals(CLOSURE_TYPE)
-                    && ("call".equals(name) || "doCall".equals(name))) {
+                    && (name.equals("call") || name.equals("doCall"))) {
                 if (objectExpression instanceof VariableExpression) {
                     Variable variable = findTargetVariable((VariableExpression) objectExpression);
                     if (variable instanceof ASTNode) {
@@ -3744,7 +3785,7 @@ out:    if ((samParameterTypes.length == 1 && isOrImplements(samParameterTypes[0
                 // GROOVY-11386:
                 if (isThisObjectExpression && call.isImplicitThis()
                     && typeCheckingContext.getEnclosingClosure() != null
-                    && !"call".equals(name) && !"doCall".equals(name)) { // GROOVY-9662
+                    && !name.equals("call") && !name.equals("doCall")) { // GROOVY-9662
                     mn = CLOSURE_TYPE.getMethods(name);
                     if (!mn.isEmpty()) {
                         receiver = CLOSURE_TYPE.getPlainNodeReference();
@@ -3774,7 +3815,7 @@ out:    if ((samParameterTypes.length == 1 && isOrImplements(samParameterTypes[0
                             }
                         }
                     }
-                    if (mn.isEmpty() && !"call".equals(name)) {
+                    if (mn.isEmpty() && !name.equals("call")) {
                         // GROOVY-5705, GROOVY-5881, GROOVY-6324, GROOVY-11366: closure property
                         var property = propX(objectExpression, call.getMethod(), call.isSafe());
                         property.setImplicitThis(call.isImplicitThis());
@@ -4005,18 +4046,17 @@ out:                if (mn.size() != 1) {
         ClassNode receiver = getType(objectExpression);
         List<Receiver<String>> owners = new ArrayList<>();
         if (typeCheckingContext.delegationMetadata != null
-                && objectExpression instanceof VariableExpression
-                && "owner".equals(((Variable) objectExpression).getName())
-                && /*isNested:*/typeCheckingContext.delegationMetadata.getParent() != null) {
+                && /*isNested:*/typeCheckingContext.delegationMetadata.getParent() != null
+                && objectExpression instanceof VariableExpression v && v.getName().equals("owner")) {
             owners.add(new Receiver<>(receiver, "owner")); // if nested, Closure is the first owner
             List<Receiver<String>> thisType = new ArrayList<>(2); // and the enclosing class is the
             addDelegateReceiver(thisType, makeThis(), null);      // end of the closure owner chain
             addReceivers(owners, thisType, typeCheckingContext.delegationMetadata.getParent(), "owner.");
         } else {
             List<ClassNode> temporaryTypes = getTemporaryTypesForExpression(objectExpression);
-            int temporaryTypesCount = (temporaryTypes != null ? temporaryTypes.size() : 0);
-            if (temporaryTypesCount > 0) { // GROOVY-8965, GROOVY-10180, GROOVY-10668
-                owners.add(Receiver.make(lowestUpperBound(temporaryTypes)));
+            temporaryTypes.removeIf(t -> receiver.isDerivedFrom(t) || receiver.implementsInterface(t));
+            if (!temporaryTypes.isEmpty()) { // GROOVY-8965, GROOVY-10180, GROOVY-10668, et al.
+                owners.add(Receiver.make(newIntersectionTypeClassNode(temporaryTypes)));
             }
             if (isClassClassNodeWrappingConcreteType(receiver)) {
                 ClassNode staticType = receiver.getGenericsTypes()[0].getType();
@@ -4032,9 +4072,6 @@ out:                if (mn.size() != 1) {
                         if (!receiver.implementsInterface(in)) owners.add(Receiver.make(in));
                     }
                 }
-            }
-            if (temporaryTypesCount > 1 && !(objectExpression instanceof VariableExpression)) {
-                owners.add(Receiver.make(new UnionTypeClassNode(temporaryTypes.toArray(ClassNode.EMPTY_ARRAY))));
             }
         }
         return owners;
@@ -4248,9 +4285,11 @@ trying: for (ClassNode[] signature : signatures) {
 
     @Override
     protected void afterSwitchCaseStatementsVisited(final SwitchStatement statement) {
-        // GROOVY-8411: if any "case Type:" then "default:" contributes condition type
-        if (!statement.getDefaultStatement().isEmpty() && !typeCheckingContext.temporaryIfBranchTypeInformation.peek().isEmpty())
-            pushInstanceOfTypeInfo(statement.getExpression(), new ClassExpression(statement.getExpression().getNodeMetaData(TYPE)));
+        // GROOVY-8411: if any "case Type:" then "default:" contributes alternate type
+        if (!statement.getDefaultStatement().isEmpty()) {
+            Expression selectable = statement.getExpression();
+            optInstanceOfTypeInfo(selectable, selectable.getNodeMetaData(TYPE));
+        }
     }
 
     @Override
@@ -4258,7 +4297,9 @@ trying: for (ClassNode[] signature : signatures) {
         Expression selectable = typeCheckingContext.getEnclosingSwitchStatement().getExpression();
         Expression expression = statement.getExpression();
         if (expression instanceof ClassExpression) { // GROOVY-8411: refine the switch type
-            pushInstanceOfTypeInfo(selectable, expression);
+            if (!optInstanceOfTypeInfo(selectable, expression.getType())) {
+                pushInstanceOfTypeInfo(selectable, expression);
+            }
         } else if (expression instanceof ClosureExpression) { // GROOVY-9854: propagate the switch type
             ClassNode inf = selectable.getNodeMetaData(TYPE);
             expression.putNodeMetaData(CLOSURE_ARGUMENTS, new ClassNode[]{inf});
@@ -5004,7 +5045,7 @@ trying: for (ClassNode[] signature : signatures) {
      */
     protected List<MethodNode> findMethodsWithGenerated(final ClassNode receiver, final String name) {
         if (receiver.isArray()) {
-            if ("clone".equals(name)) { // GROOVY-10319: array clone -- <https://docs.oracle.com/javase/specs/jls/se8/html/jls-10.html#jls-10.7>
+            if (name.equals("clone")) { // GROOVY-10319: array clone -- <https://docs.oracle.com/javase/specs/jls/se8/html/jls-10.html#jls-10.7>
                 MethodNode clone = new MethodNode("clone", Opcodes.ACC_PUBLIC, OBJECT_TYPE, Parameter.EMPTY_ARRAY, ClassNode.EMPTY_ARRAY, null);
                 clone.setDeclaringClass(OBJECT_TYPE); // retain Object for declaringClass and returnType
                 clone.setNodeMetaData(INFERRED_RETURN_TYPE, receiver);
@@ -5322,7 +5363,7 @@ trying: for (ClassNode[] signature : signatures) {
                 if (parameters != null) {
                     final int n = parameters.length;
                     String parameterName = parameter.getName();
-                    if (n == 0 && "it".equals(parameterName)) {
+                    if (n == 0 && parameterName.equals("it")) {
                         return closureParamTypes.length > 0 ? closureParamTypes[0] : null;
                     }
                     for (int i = 0; i < n; i += 1) {
@@ -5338,10 +5379,9 @@ trying: for (ClassNode[] signature : signatures) {
 
     private static ClassNode makeSelf(final ClassNode trait) {
         Set<ClassNode> selfTypes = Traits.collectSelfTypes(trait, new LinkedHashSet<>());
-        if (!selfTypes.isEmpty()) { // TODO: reduce to the most-specific type(s)
-            ClassNode superclass = selfTypes.stream().filter(t -> !t.isInterface()).findFirst().orElse(OBJECT_TYPE);
-            selfTypes.remove(superclass); selfTypes.add(trait);
-            return new WideningCategories.LowestUpperBoundClassNode("TypesOf$" + trait.getNameWithoutPackage(), superclass, selfTypes.toArray(ClassNode.EMPTY_ARRAY));
+        if (!selfTypes.isEmpty()) {
+            selfTypes.add(trait);
+            return newIntersectionTypeClassNode(selfTypes);
         }
         return trait;
     }
@@ -6158,19 +6198,34 @@ out:    for (ClassNode type : todo) {
     // temporaryIfBranchTypeInformation support; migrate to TypeCheckingContext?
 
     /**
-     * Stores information about types when [objectOfInstanceof instanceof typeExpression] is visited.
+     * Stores information about types when <i>[objectExpression instanceof typeExpression]</i> is visited.
      *
-     * @param objectOfInstanceOf the expression to be checked against instanceof
-     * @param typeExpression     the expression which represents the target type
+     * @param objectExpression the expression to be checked against instanceof
+     * @param typeExpression   the expression which represents the target type
      */
-    protected void pushInstanceOfTypeInfo(final Expression objectOfInstanceOf, final Expression typeExpression) {
-        Object ttiKey = extractTemporaryTypeInfoKey(objectOfInstanceOf); ClassNode type = typeExpression.getType();
-        typeCheckingContext.temporaryIfBranchTypeInformation.peek().computeIfAbsent(ttiKey, x -> new LinkedList<>()).add(type);
+    protected void pushInstanceOfTypeInfo(final Expression objectExpression, final Expression typeExpression) {
+        var tti = typeCheckingContext.peekTemporaryTypeInfo(extractTemporaryTypeInfoKey(objectExpression));
+        ClassNode type = typeExpression.getType();
+        tti.removeIf(type::isDerivedFrom); // x instanceof Number && x instanceof Integer; Number is redundant
+        tti.add(type);
     }
 
     private void putNotInstanceOfTypeInfo(final Object key, final Collection<ClassNode> types) {
-        Object notKey = key instanceof Object[] ? ((Object[]) key)[1] : new Object[]{"!instanceof", key}; // stash negative type(s)
-        typeCheckingContext.temporaryIfBranchTypeInformation.peek().computeIfAbsent(notKey, x -> new LinkedList<>()).addAll(types);
+        Object notKey = key instanceof Object[] arr ? arr[1] : new Object[]{"!instanceof", key};
+        var tti = typeCheckingContext.peekTemporaryTypeInfo(notKey);
+        tti.addAll(types); // stash negative type(s)
+    }
+
+    private boolean optInstanceOfTypeInfo(final Expression expression, final ClassNode type) {
+        var tti = typeCheckingContext.temporaryIfBranchTypeInformation.peek().get(extractTemporaryTypeInfoKey(expression));
+        if (tti != null) { assert !tti.isEmpty();
+            tti.add(type);
+            ClassNode ut = newUnionTypeClassNode(tti);
+            tti.clear();
+            tti.add(ut);
+            return true;
+        }
+        return false;
     }
 
     /**
@@ -6209,7 +6264,7 @@ out:    for (ClassNode type : todo) {
     }
 
     private ClassNode getInferredTypeFromTempInfo(final Expression expression, final ClassNode expressionType) {
-        if (expression instanceof VariableExpression) {
+        if (expression instanceof VariableExpression && !isPrimitiveType(expressionType)) {
             List<ClassNode> tempTypes = getTemporaryTypesForExpression(expression);
             if (!tempTypes.isEmpty()) {
                 ClassNode   superclass;
@@ -6252,11 +6307,34 @@ out:    for (ClassNode type : todo) {
                 if (typesCount == 1) {
                     return types.get(0);
                 } else if (typesCount > 1) {
-                    return new UnionTypeClassNode(types.toArray(ClassNode.EMPTY_ARRAY));
+                    return newIntersectionTypeClassNode(types);
                 }
             }
         }
         return expressionType;
+    }
+
+    private static ClassNode newIntersectionTypeClassNode(final Collection<ClassNode> types) {
+        Map<Boolean, List<ClassNode>> spec = types.stream().collect(Collectors.partitioningBy(ClassNode::isInterface));
+        ClassNode[] interfaces = spec.get(Boolean.TRUE ).toArray(ClassNode[]::new);
+        List<ClassNode> supers = spec.get(Boolean.FALSE);
+        if (interfaces.length == 0) return supers.get(0);
+        supers.add(OBJECT_TYPE); // ensure get(0) nothrow
+        return new WideningCategories.LowestUpperBoundClassNode("IntersectionTypeClassNode", supers.get(0), interfaces);
+    }
+
+    private static ClassNode newUnionTypeClassNode(final Collection<ClassNode> types) {
+        if (types.size() == 1) return types.iterator().next();
+        var set = new LinkedHashSet<ClassNode>();
+        for (ClassNode t : types) {
+            if (t instanceof UnionTypeClassNode u) {
+                Collections.addAll(set, u.getDelegates());
+            } else {
+                set.add(t);
+            }
+        }
+        assert set.size() > 1;
+        return new UnionTypeClassNode(set.toArray(ClassNode[]::new));
     }
 
     //--------------------------------------------------------------------------
